--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,5 +19,6 @@
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.1"
-  }
+  },
+  "type": "module"
 }
