--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-Mongo_URL="mongodb+srv://sharcongaming:lonavla@game@cluster0.vikvlva.mongodb.net/samiksha"
-JWT_SECRET = "sAMIKSHA@12#12"
+Mongo_URL="mongodb+srv://crewcoding61:samiksha123@cluster0.obnufg3.mongodb.net/Login"
+JWT_SECRET = "samikshaqwee"
